--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // necessary to get Kotlin for Forge to work
-buildscript {
-    repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
-        // OPTIONAL Kotlin Serialization plugin
-        classpath 'org.jetbrains.kotlin:kotlin-serialization:1.7.0'
-    }
-}
+//buildscript {
+//    repositories {
+//        maven { url = 'https://maven.minecraftforge.net' }
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+//        // OPTIONAL Kotlin Serialization plugin
+//        classpath 'org.jetbrains.kotlin:kotlin-serialization:1.7.0'
+//    }
+//}
 
 plugins {
     id 'eclipse'
